fixed wrapped menu items' height

--- a/src/scss/_sidenav.scss
+++ b/src/scss/_sidenav.scss
@@ -16,5 +16,6 @@
     line-height: 1.5em;
     font-size: 1em;
     font-weight: 500;
+    height: auto;
   }
 }
